# BE_RUST

./: .env  Cargo.toml  Readme.md  docker-compose.yml  main
src/: error.rs  lib.rs  main copy.rs  main.rs  ownership.rs
src/routes/: always_errors.rs  create_task.rs  custom_json_extractor.rs  get_json.rs  get_task.rs  hello_world.rs  middleware_custom_header.rs  middleware_message.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  query_params.rs  validate_data.rs
src/web/: mod.rs
tests/: quick_dev.rs
