[package]
name = "routing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.5.15", features = ["headers"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.3.4", features = ["cors"] }
http = { version = "0.2.8"}
validator = { version = "0.16.0", features = ["derive"] }
sea-orm = { version = "1.0.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
